--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
   <modules>
     <module>server</module>
-    <module>webapp1</module>
+    <module>webapp</module>
   </modules>
 
   <distributionManagement>
