--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -12,7 +12,7 @@
 
   <artifactId>webapp</artifactId>
   <packaging>war</packaging>
-  <name>Webapp</name>
+  <name>maven-Webapp</name>
   <description>Webapp.</description>
 
   <build>
