--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -10,7 +10,7 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <artifactId>Maven-webapp</artifactId>
+  <artifactId>Maven-webapp-sudeep</artifactId>
   <packaging>war</packaging>
   <name>maven-Web</name>
   <description>Webapp</description>
